Corrected alignment of about text, modified carreer section.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -525,16 +525,20 @@ section {
 .section-title {
   text-align: center;
   padding-bottom: 30px;
+  padding-top: 30px;
 }
 
 .section-title h2 {
   font-size: 32px;
   font-weight: 600;
   margin-bottom: 20px;
+  margin-top: 20px;
   padding-bottom: 0;
   color: #5c768d;
 }
-
+#career-status{
+  padding:30px 0px 30px 0px;
+}
 .section-title p {
   margin-bottom: 0;
 }
@@ -611,8 +615,8 @@ section {
 }
 
 .about .icon-box .description {
-  text-align:center ;
-  /* margin-left: 95px; */
+  
+  margin-left: 95px;
   line-height: 24px;
   font-size: 14px;
   float: right;
